force-app/main/default/objects/Requirement__c/Requirement__c.object-meta.xml
<CustomObject>
    <label>Requirement</label>
    <nameField>
        <label>Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>