force-app/main/default/objects/Requirement__c/fields/Auto_Story_Created__c.field-meta.xml
<CustomField>
    <fullName>Auto_Story_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by system when a Story is automatically created on approval of this requirement.</description>
    <label>Story Auto-Created</label>
    <type>Checkbox</type>
</CustomField>