force-app/main/default/objects/Requirement__c/fields/Linked_Story__c.field-meta.xml
<CustomField>
    <fullName>Linked_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Story</label>
    <referenceTo>Story__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>