force-app/main/default/objects/Requirement__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Project_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>