force-app/main/default/objects/Requirement__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <label>Requestor</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>