force-app/main/default/objects/Requirement__c/validationRules/Change_Request_Requires_Impact.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Request_Requires_Impact</fullName>
    <active>true</active>
    <description>Change Requests (Category = Change Request) must have an Impact description.</description>
    <errorConditionFormula>ISPICKVAL(Category__c, &apos;Change Request&apos;) &amp;&amp; ISBLANK(Impact__c)</errorConditionFormula>
    <errorMessage>Change Requests must include an Impact description before they can be saved.</errorMessage>
</ValidationRule>